--- a/.project
+++ b/.project
@@ -3,6 +3,7 @@
 	<name>ecommerce</name>
 	<comment></comment>
 	<projects>
+		<project>Servers</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
