--- a/.classpath
+++ b/.classpath
@@ -14,6 +14,9 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Definitiva"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/Definitiva"/>
+	<classpathentry kind="lib" path="bin/lib/commons-io-2.11.0.jar"/>
+	<classpathentry kind="lib" path="bin/lib/gson-2.8.9.jar"/>
+	<classpathentry kind="lib" path="bin/lib/mysql-connector-java-8.0.19.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
