--- a/.classpath
+++ b/.classpath
@@ -8,15 +8,14 @@
 	</classpathentry>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0">
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/apache-tomcat-9.0.86">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web;#system#"/>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/Definitiva"/>
-	<classpathentry kind="lib" path="bin/lib/commons-io-2.11.0.jar"/>
-	<classpathentry kind="lib" path="bin/lib/gson-2.8.9.jar"/>
-	<classpathentry kind="lib" path="bin/lib/mysql-connector-java-8.0.19.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lucag/Downloads/gson-2.8.9.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lucag/Downloads/commons-io-2.11.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lucag/Downloads/mysql-connector-j-8.3.0.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
