--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -8,5 +8,16 @@
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 
+    <!-- Configurazione del DataSource -->
+    <resource-ref>
+        <description>DB Connection</description>
+        <res-ref-name>jdbc/ingrosso</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
+    
+   
+    
+
     <!-- Altri elementi del tuo web.xml, come servlets, filters, ecc. -->
 </web-app>
