--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -15,6 +15,49 @@
         <res-type>javax.sql.DataSource</res-type>
         <res-auth>Container</res-auth>
     </resource-ref>
+  
+  <servlet>
+    <servlet-name>AcquistoControl</servlet-name>
+    <servlet-class>control.AcquistoControl</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AcquistoControl</servlet-name>
+    <url-pattern>/acquista</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>ProductControl</servlet-name>
+    <servlet-class>control.ProductControl</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ProductControl</servlet-name>
+    <url-pattern>/product</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>OrdineControl</servlet-name>
+    <servlet-class>control.OrdineControl</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>OrdineControl</servlet-name>
+    <url-pattern>/ordine</url-pattern>
+  </servlet-mapping>
+  
+     <servlet>
+    <servlet-name>RegistrationControl</servlet-name>
+    <servlet-class>control.RegistrationControl</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>RegistrationControl</servlet-name>
+    <url-pattern>/registration</url-pattern>
+  </servlet-mapping>
+  
+       <servlet>
+    <servlet-name>FatturaControl</servlet-name>
+    <servlet-class>control.FatturaControl</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>FatturaControl</servlet-name>
+    <url-pattern>/fattura</url-pattern>
+  </servlet-mapping>
     
    
     
