--- a/.classpath
+++ b/.classpath
@@ -14,10 +14,9 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/rical/Downloads/commons-io-2.11.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/rical/Downloads/mysql-connector-java-8.0.28.jar"/>
-	<classpathentry kind="lib" path="C:/Users/rical/Downloads/gson-2.8.9.jar"/>
-	<classpathentry kind="lib" path="C:/Users/rical/Downloads/servlet-api.jar"/>
-	<classpathentry kind="lib" path="C:/Users/rical/Downloads/javax.servlet-api-3.0.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/lib/commons-io-2.11.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/lib/gson-2.8.9.jar"/>
+	<classpathentry kind="lib" path="WebContent/lib/mysql-connector-java-8.0.28.jar"/>
+	<classpathentry kind="lib" path="WebContent/lib/servlet-api.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
