--- a/.classpath
+++ b/.classpath
@@ -14,9 +14,9 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="WebContent/lib/commons-io-2.11.0.jar"/>
-	<classpathentry kind="lib" path="WebContent/lib/gson-2.8.9.jar"/>
-	<classpathentry kind="lib" path="WebContent/lib/mysql-connector-java-8.0.28.jar"/>
-	<classpathentry kind="lib" path="WebContent/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="lib/commons-io-2.11.0.jar"/>
+	<classpathentry kind="lib" path="lib/gson-2.8.9.jar"/>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-8.0.28.jar"/>
+	<classpathentry kind="lib" path="lib/servlet-api.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
