--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -16,6 +16,16 @@
     <res-auth>Container</res-auth>
 </resource-ref>  
 
+	<error-page>
+  <error-code>404</error-code>
+  <location>/Errore404.jsp</location>
+</error-page>
+
+<error-page>
+  <error-code>500</error-code>
+  <location>/Erorre500.jsp</location>
+</error-page>
+
   <servlet>
     <servlet-name>AcquistoControl</servlet-name>
     <servlet-class>control.AcquistoControl</servlet-class>
