Amministratore responsive aggiornato

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -62,6 +62,15 @@
     <url-pattern>/registration</url-pattern>
   </servlet-mapping>
   
+  <servlet>
+    <servlet-name>LogoutServlet</servlet-name>
+    <servlet-class>control.LogoutServlet</servlet-class>
+</servlet>
+<servlet-mapping>
+    <servlet-name>LogoutServlet</servlet-name>
+    <url-pattern>/logout</url-pattern>
+</servlet-mapping>
+  
    
     
 
