--- a/.classpath
+++ b/.classpath
@@ -14,11 +14,11 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	
 	<classpathentry kind="lib" path="lib/commons-io-2.11.0.jar"/>
 	<classpathentry kind="lib" path="lib/gson-2.8.9.jar"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-8.0.28.jar"/>
 	<classpathentry kind="lib" path="lib/servlet-api.jar"/>
 	<classpathentry kind="lib" path="lib/javax.servlet-api-3.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/json-20240303.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
